--- a/styles/style.css
+++ b/styles/style.css
@@ -56,7 +56,7 @@
     box-shadow: 5px 5px 16px black;
     display: grid;
     grid-template-columns: 2fr 2fr 2fr  2fr ;
-    grid-template-rows: 1fr 3fr 3fr 3fr 3fr 3fr 3fr;
+    grid-template-rows: 1fr 3fr 3fr 3fr 3fr 3fr ;
     gap: 10px;
 
     
@@ -177,7 +177,7 @@
     outline: 3px solid black;
     box-shadow: 5px 5px 10px black;
     margin-right: 4vh;
-    margin-top: -15vh;
+    margin-top: -14vh;
     display: grid;
     height: 40vh;
     grid-template-columns: 1fr 1fr 1fr;
