--- a/styles/style.css
+++ b/styles/style.css
@@ -56,7 +56,7 @@
     box-shadow: 5px 5px 16px black;
     display: grid;
     grid-template-columns: 2fr 2fr 2fr  2fr ;
-    grid-template-rows: 1fr 3fr 3fr 3fr 3fr 3fr ;
+    grid-template-rows: .5fr .5fr .5fr .5fr;
     gap: 10px;
 
     
@@ -127,19 +127,19 @@
 }
 
 .section-one{
-    background-color: brown;
+    background-color: rgb(78, 76, 76);
     grid-column: 1/2;
     grid-row: 1/10;
     outline: 2px solid black;
     width: 100%;
-    height: 100vh;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: .4fr  2fr 2.5fr 2.5fr 2.5fr;
+    grid-template-rows: .4fr  2fr 2.7fr 4.5fr 2.7fr;
     justify-content: center;
     text-align: center;
-    width: 70%;
-    height: ;
+    align-items: center;
+    width: 60%;
+    
     
     flex-wrap: wrap;
     margin-left: 5%;
@@ -156,11 +156,11 @@
 .section-two{
     background-color: rgb(78, 76, 76);
     grid-column: 2/5;
-    grid-row: 1/4;
+    grid-row: 2/3;
     margin-right: 4vh;
     
     outline: 3px solid black;
-    margin-top: 3vh;
+    margin-top: -11vh;
     box-shadow: 5px 5px 10px black;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -173,13 +173,13 @@
     
     background-color: rgb(78, 76, 76);
     grid-column: 2/5;
-    grid-row: 5/7;
+    grid-row: 5/6;
     outline: 3px solid black;
     box-shadow: 5px 5px 10px black;
     margin-right: 4vh;
-    margin-top: -14vh;
+    margin-top: -25vh;
     display: grid;
-    height: 40vh;
+    
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: .3fr 2fr 2fr;
 
@@ -195,13 +195,16 @@
 .article1{
     background-color: rgb(78, 76, 76);
     grid-column: 1/3;
-    grid-row: 1/4 ;
-    height: ;
+    grid-row: 2/4 ;
     width: 100%;
-    padding: .8rem;
+    padding: .3rem;
     justify-content: center;
     align-items: center;
+    margin-top: 8vh;
     
+    outline: 2px solid black;
+    box-shadow: 5px 5px 10px black;
+
 }
 
 
@@ -209,13 +212,16 @@
 .article2{
     border-top: 2px solid black;
     background-color: rgb(78, 76, 76);
-    height: ;
     width: 100%;
     grid-column: 1/3;
-    grid-row: 4/7;
-    padding: .8rem;
+    grid-row: 4/5;
+    padding: .3rem;
     justify-content: center;
     align-items: center;
+    outline: 2px solid black;
+    box-shadow: 5px 5px 10px black;
+    margin-top: 8vh;
+
     
 }
 
@@ -243,16 +249,16 @@
 .title1{
     font-family: 'Arial Narrow', Arial, sans-serif;
     font-size: 13px;
-    padding: 1px;
+    padding: ;
     margin-top: 3vh;
-    height: 8vh;
+    height: ;
     width: 90%;
     margin-left: auto;
     margin-right: auto;
     display: flex;
     align-items: center;
     justify-content: center;
-    outline: 3px solid black;
+    outline: 2px solid black;
     box-shadow: 3px 3px 5px black;
     
 }
@@ -281,7 +287,7 @@
     font-size: 14px;
     padding: 1px;
     margin-top: 2vh;
-    height: 8vh;
+    height: ;
     width: 90%;
     margin-left: auto;
     margin-right: auto;
